[package]
name = "tree2db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postflop-solver = { git = "https://github.com/b-inary/postflop-solver" }
aws-config = { version = "1.1.5", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.14.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
