[package]
name = "tree2db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postflop-solver = { git = "https://github.com/b-inary/postflop-solver" }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.7"
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
mongodb = "2.8.1"
dotenvy_macro = "0.15.7"
